--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     </style>
   </head>
   <body>
-  <h1>Welcome to mental health identification<br>Click <a href="https://mpreetha99.github.io/">here</a> to continue</h1>​
+  <h1>Welcome to mental health identification<br>Click <a href="https://mpreetha99.github.io/">here</a> to contnue</h1>​
   </body>
 </html>
