--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
         font-size: 2em;
         color:maroon;
       }
+      
+      mark {
+  background-color: rgb(199, 199, 199);
+  color: black;
+}
     </style>
   </head>
   <body>
-  <h1>Welcome to mental health identification<br>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>​
+  <h1><mark>Welcome to Mental Health Identification</mark><br><mark>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>​
   </body>
 </html>
+
