--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
   </head>
   <body>
-  <h1><mark>Welcome to Mental Health Identification</mark><br><mark>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>​
+  <h1><mark>Welcome to Mental Health Identification</mark><br>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>​
   </body>
 </html>
 
