--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
         color:maroon;
       }
       
-      mark {
-  background-color: rgb(199, 199, 199);
-  color: black;
-}
+
     </style>
   </head>
   <body>
-  <h1><mark>Welcome to Mental Health Identification</mark><br>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>​
+  <h1>Welcome to Mental Health Identification<br>Click <a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>
   </body>
 </html>
 
