--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-  <h1>Welcome to Mental Health Identification<br>Click<a href="https://gabrieltht.github.io/mpreetha99.github.io">here</a> to contnue</h1>
+  <h1>Welcome to Mental Health Identification<br>Click<a href="https://mpreetha99.github.io">here</a> to contnue</h1>
   </body>
 </html>
 
